--- a/docs/package.json
+++ b/docs/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "dev": "next dev -p 3002",
+    "build": "next build ",
+    "start": "next start p 3002"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,8 @@
     "nextra-theme-docs": "^3.0.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "22.7.6"
   }
 }
