fix: resolved svg errors fix: suppressed hydration warnings chore: set up env imports chore: updated prettierrc

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -4,6 +4,7 @@
     "prettier-plugin-tailwindcss"
   ],
   "importOrder": [
+    "<THIRD_PARTY_MODULES>",
     "^@lib/(.*)$",
     "^@api/(.*)$",
     "^@app/(.*)$",
