feat: added agence factory contract fix: staking now refunds user if tx failed chore: removed boilerplate governor code build: updated build and deploy scripts

--- a/modules/near/Makefile
+++ b/modules/near/Makefile
@@ -1,22 +1,32 @@
 test-gigs:
 	@cd gigs && cargo test
 
+test-factory:
+	@cd factory && cargo test
+
 test-staking:
 	@cd staking && cargo test
 
 test-governance:
 	@cd governance && cargo test
 
-test: test-gigs test-staking test-governance
+test: test-gigs test-staking test-governance test-factory
 
 
 build-gigs:
-	@cd gigs && ./scripts/build.sh
+	@cd gigs && ./build.sh
+
+build-factory:
+	@cd factory && ./scripts/build.sh
 
 build-staking:
-	@cd staking && ./scripts/build.sh
+	@cd staking && ./build.sh
 
 build-governance:
-	@cd governance && ./scripts/build.sh
+	@cd governance && ./build.sh
 
-build: build-gigs build-staking build-governance
+build: build-gigs build-staking build-governance build-factory
+
+
+deploy: build
+	@./factory/scripts/deploy.sh
