--- a/server/.air.toml
+++ b/server/.air.toml
@@ -4,10 +4,10 @@ tmp_dir = "tmp"
 
 [build]
 args_bin = []
-bin = "./bin/main.o"
-cmd = "go build -o ./bin/main.o ./cmd/main.go"
+bin = "./bin/app.o"
+cmd = "go build -o ./bin/app.o ./cmd/app.go"
 delay = 1000
-exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+exclude_dir = ["assets", "bin", "tmp", "vendor", "testdata"]
 exclude_file = []
 exclude_regex = ["_test.go"]
 exclude_unchanged = false
