--- a/modules/near/Cargo.toml
+++ b/modules/near/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
-members = [ "factory","gigs", "governance", "staking"]
+members = [
+    "agence_factory",
+    "agence_gigs",
+    "agence_governance",
+    "agence_staking",
+]
 resolver = "2"
