--- a/modules/near/Makefile
+++ b/modules/near/Makefile
@@ -1,32 +1,32 @@
 test-gigs:
-	@cd gigs && cargo test
+	@cd agence_gigs && cargo test
 
 test-factory:
-	@cd factory && cargo test
+	@cd agence_factory && cargo test
 
 test-staking:
-	@cd staking && cargo test
+	@cd agence_staking && cargo test
 
 test-governance:
-	@cd governance && cargo test
+	@cd agence_governance && cargo test
 
 test: test-gigs test-staking test-governance test-factory
 
 
 build-gigs:
-	@cd gigs && ./build.sh
+	@cd agence_gigs && ./build.sh
 
 build-factory:
-	@cd factory && ./scripts/build.sh
+	@cd agence_factory && ./scripts/build.sh
 
 build-staking:
-	@cd staking && ./build.sh
+	@cd agence_staking && ./build.sh
 
 build-governance:
-	@cd governance && ./build.sh
+	@cd agence_governance && ./build.sh
 
 build: build-gigs build-staking build-governance build-factory
 
 
 deploy: build
-	@./factory/scripts/deploy.sh
+	@./agence_factory/scripts/deploy.sh
