fix: deployed smart contracts to testnet chore: fixed dependency issues

--- a/modules/near/Makefile
+++ b/modules/near/Makefile
@@ -30,3 +30,6 @@ build: build-gigs build-staking build-governance build-factory
 
 deploy: build
 	@./agence_factory/scripts/deploy.sh
+
+reset:
+	@./agence_factory/scripts/create.sh
