--- a/modules/near/Cargo.toml
+++ b/modules/near/Cargo.toml
@@ -6,3 +6,11 @@ members = [
     "agence_staking",
 ]
 resolver = "2"
+
+[profile.release]
+codegen-units = 1
+opt-level = "z"
+lto = true
+debug = false
+panic = "abort"
+overflow-checks = true
