feat: user can now create an account via Bitte feat: set up network configurations for a multichain application chore: added more shadcn components

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -4,7 +4,6 @@
     "prettier-plugin-tailwindcss"
   ],
   "importOrder": [
-    "<THIRD_PARTY_MODULES>",
     "^@lib/(.*)$",
     "^@api/(.*)$",
     "^@app/(.*)$",
@@ -14,5 +13,6 @@
     "^[./]"
   ],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": false,
+  "importOrderGroupNamespaceSpecifiers": true
 }
