feat(server): implemented CRUD for user fix(client): resolved issues with onboarding

--- a/server/.air.toml
+++ b/server/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
 args_bin = []
 bin = "./bin/app.o"
-cmd = "go build -o ./bin/app.o ./cmd/app.go"
+cmd = "go build -o ./bin/app.o ./cmd/app/main.go"
 delay = 1000
 exclude_dir = ["assets", "bin", "tmp", "vendor", "testdata"]
 exclude_file = []
