--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@near-wallet-selector/core": "^8.9.13",
     "@near-wallet-selector/modal-ui": "^8.9.13",
     "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
