--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blockshake/defly-connect": "^1.1.6",
     "@hookform/resolvers": "^3.9.0",
     "@near-wallet-selector/bitte-wallet": "^8.9.13",
     "@near-wallet-selector/core": "^8.9.13",
     "@near-wallet-selector/modal-ui": "^8.9.13",
+    "@perawallet/connect": "^1.3.5",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -28,6 +30,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
@@ -35,10 +38,12 @@
     "@supabase/supabase-js": "^2.45.6",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-table": "^8.20.5",
+    "@txnlab/use-wallet-react": "^3.10.0",
+    "algosdk": "^2.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.453.0",
     "near-api-js": "^4.0.3",
     "next": "14.2.15",
