feat: added boilerplate inbox page

--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.453.0",
     "near-api-js": "^4.0.3",
