--- a/contracts/algorand/.algokit.toml
+++ b/contracts/algorand/.algokit.toml
@@ -16,9 +16,7 @@ artifacts = 'smart_contracts/artifacts'
 
 [project.deploy]
 command = "poetry run python -m smart_contracts deploy"
-environment_secrets = [
-  "DEPLOYER_MNEMONIC",
-]
+environment_secrets = ["DEPLOYER_MNEMONIC"]
 
 [project.deploy.localnet]
 environment_secrets = []
@@ -28,8 +26,14 @@ environment_secrets = []
 build = { commands = [
   'poetry run python -m smart_contracts build',
 ], description = 'Build all smart contracts in the project' }
-lint = { commands = [
-], description = 'Perform linting' }
+
+copy-artifacts = { commands = [
+  'mkdir -p ../../client/src/lib/interfaces/algorand',
+  'cp -r ./smart_contracts/artifacts/ ../../client/src/lib/interfaces/algorand',
+], description = 'Copy artifacts to client' }
+
+
+lint = { commands = [], description = 'Perform linting' }
 audit-teal = { commands = [
   # 🚨 IMPORTANT 🚨: For strict TEAL validation, remove --exclude statements. The default starter contract is not for production. Ensure thorough testing and adherence to best practices in smart contract development. This is not a replacement for a professional audit.
   'algokit task analyze smart_contracts/artifacts --recursive --force --exclude rekey-to --exclude is-updatable --exclude missing-fee-check --exclude is-deletable --exclude can-close-asset --exclude can-close-account --exclude unprotected-deletable --exclude unprotected-updatable',
