--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algorandfoundation/algokit-client-generator": "^3.0.6",
+    "@algorandfoundation/algokit-utils": "^6.2.1",
     "@blockshake/defly-connect": "^1.1.6",
     "@hookform/resolvers": "^3.9.0",
     "@near-wallet-selector/bitte-wallet": "^8.9.13",
@@ -68,7 +70,6 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
