--- a/contracts/ethereum/foundry.toml
+++ b/contracts/ethereum/foundry.toml
@@ -3,4 +3,4 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-remappings = []
+remappings = ["@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"]
