forge install: layerzero-v2

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contracts/ethereum/lib/openzeppelin-contracts"]
 	path = contracts/ethereum/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "contracts/ethereum/lib/layerzero-v2"]
+	path = contracts/ethereum/lib/layerzero-v2
+	url = https://github.com/LayerZero-Labs/layerzero-v2
