--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contracts/lib/openzeppelin-contracts"]
 	path = contracts/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "contracts/lib/layerzero-v2"]
+	path = contracts/lib/layerzero-v2
+	url = https://github.com/LayerZero-Labs/layerzero-v2
