chore: reinstalled hardhat because foundry deployment is PAINFUL

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,6 +5,7 @@ libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 remappings = [
+    "solidity-bytes-utils/=lib/solidity-bytes-utils",
     "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
     '@layerzerolabs/oft-evm/=lib/devtools/packages/oft-evm/',
     "@layerzerolabs/oapp-evm/=lib/devtools/packages/oapp-evm/",
