--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -9,5 +9,8 @@ remappings = [
 
     "@layerzerolabs/oft-evm/=lib/devtools/packages/oft-evm/",
     "@layerzerolabs/oapp-evm/=lib/devtools/packages/oapp-evm/",
+
+    "@layerzerolabs/test-devtools-evm-foundry/=lib/devtools/packages/test-devtools-evm-foundry/",
     "@layerzerolabs/lz-evm-protocol-v2/=lib/layerzero-v2/packages/layerzero-v2/evm/protocol",
+
 ]
