feat: added deployment script with forge and cast feat: added more build options to Makefile perf: reduced gas of Agence Constructor

--- a/contracts/Makefile
+++ b/contracts/Makefile
@@ -1,48 +1,70 @@
+.PHONY: help
+help:
+	@echo "Available targets:"
+	@echo "  deploy       	- Deploy to Base Sepolia and Polygon Amoy, and set peers"
+	@echo "  deploy-base  	- Deploy only to Base Sepolia"
+	@echo "  deploy-polygon - Deploy only to Polygon Amoy"
+	@echo "  set-peers    	- Set peer configurations between Base Sepolia and Polygon Amoy"
+	@echo "  clean        	- Remove deployment artifacts"
+
+# Ensure the deploy script is executable
+deploy.sh:
+	@chmod +x deploy.sh
+
+# Load environment variables
 include .env
 
-init:
-	$(eval BASE_SEPOLIA_CONTRACT_ADDRESS=$(shell jq -r .deployedTo ./data/base_sepolia_address.json))
-	$(eval POLYGON_AMOY_CONTRACT_ADDRESS=$(shell jq -r .deployedTo ./data/polygon_amoy_address.json))
+# Full deployment to all networks with peer configuration
+.PHONY: deploy
+deploy: deploy-base deploy-polygon set-peers
 
-	$(eval BASE_SEPOLIA_CONTRACT_BYTES32=$(shell cast --to-bytes32 ${BASE_SEPOLIA_CONTRACT_ADDRESS}))
-	$(eval POLYGON_AMOY_CONTRACT_BYTES32=$(shell cast --to-bytes32 ${POLYGON_AMOY_CONTRACT_ADDRESS}))
+# Deploy to Base Sepolia only
+.PHONY: deploy-base
+deploy-base: deploy.sh
+	@NETWORK=base_sepolia ./deploy.sh
+
+# Deploy to Polygon Amoy only
+.PHONY: deploy-polygon
+deploy-polygon: deploy.sh
+	@NETWORK=polygon_amoy ./deploy.sh
+
+# Set peer configurations between networks
+.PHONY: set-peers
+set-peers:
+	# Validate required environment variables
+	@if [ -z "$(POLYGON_AMOY_ENDPOINT_ID)" ]; then \
+		echo "Error: POLYGON_AMOY_ENDPOINT_ID is not set"; \
+		exit 1; \
+	fi
+	@if [ -z "$(BASE_SEPOLIA_ENDPOINT_ID)" ]; then \
+		echo "Error: BASE_SEPOLIA_ENDPOINT_ID is not set"; \
+		exit 1; \
+	fi
+
+	# Load contract addresses
+	$(eval BASE_SEPOLIA_AGENCE_ADDRESS=$(jq -r .deployedTo "./data/base_sepolia/agence.json"))
+	$(eval POLYGON_AMOY_AGENCE_ADDRESS=$(jq -r .deployedTo "./data/polygon_amoy/agence.json"))
+
+	# Convert contract addresses to bytes32
+	$(eval POLYGON_AMOY_CONTRACT_BYTES32=$(shell cast --to-bytes32 $(POLYGON_AMOY_AGENCE_ADDRESS)))
+	$(eval BASE_SEPOLIA_CONTRACT_BYTES32=$(shell cast --to-bytes32 $(BASE_SEPOLIA_AGENCE_ADDRESS)))
 
 	@echo "Setting Peer for Base Sepolia"
-	cast send ${BASE_SEPOLIA_CONTRACT_ADDRESS} --json \
-		--rpc-url ${BASE_SEPOLIA_RPC} \
-		"setPeer(uint32, bytes32)" ${POLYGON_AMOY_ENDPOINT_ID} ${POLYGON_AMOY_CONTRACT_BYTES32} \
-		--account deployer \
-		| jq
+	cast send $(BASE_SEPOLIA_AGENCE_ADDRESS) --json \
+		--rpc-url $(BASE_SEPOLIA_RPC) \
+		"setPeer(uint32, bytes32)" $(POLYGON_AMOY_ENDPOINT_ID) $(POLYGON_AMOY_CONTRACT_BYTES32) \
+		--account deployer
 
 	@echo "Setting Peer for Polygon Amoy"
-	cast send ${POLYGON_AMOY_CONTRACT_ADDRESS} --json \
-		--rpc-url ${POLYGON_AMOY_RPC} \
-		"setPeer(uint32, bytes32)" ${BASE_SEPOLIA_ENDPOINT_ID} ${BASE_SEPOLIA_CONTRACT_BYTES32} \
-		--account deployer \
-		| jq
+	cast send $(POLYGON_AMOY_AGENCE_ADDRESS) --json \
+		--rpc-url $(POLYGON_AMOY_RPC) \
+		"setPeer(uint32, bytes32)" $(BASE_SEPOLIA_ENDPOINT_ID) $(BASE_SEPOLIA_CONTRACT_BYTES32) \
+		--account deployer
 
-deploy:
-	@echo "Deploying to Base Sepolia"
-	forge create src/Agence.sol:Agence --json \
-		--rpc-url ${BASE_SEPOLIA_RPC} \
-		--account deployer --broadcast \
-		--constructor-args ${BASE_SEPOLIA_ENDPOINT} ${DEPLOYER} \
-		--etherscan-api-key ${BASESCAN_API_KEY} --verify \
-		> data/base_sepolia_address.json
+	@echo "\n\n============= Peer Configuration Complete ✨ ============="
 
-	@echo "Deploying to Polygon Amoy"
-	forge create src/Agence.sol:Agence --json \
-		--rpc-url ${POLYGON_AMOY_RPC} \
-		--account deployer --broadcast \
-		--constructor-args ${POLYGON_AMOY_ENDPOINT} ${DEPLOYER} \
-		--etherscan-api-key ${POLYGONSCAN_API_KEY} --verify \
-		> data/polygon_amoy_address.json
-	
-	$(eval BASE_SEPOLIA_CONTRACT_ADDRESS=$(shell jq -r .deployedTo ./data/base_sepolia_address.json))
-	$(eval POLYGON_AMOY_CONTRACT_ADDRESS=$(shell jq -r .deployedTo ./data/polygon_amoy_address.json))
-	@echo 
-
-	@echo "Agence deployed to ${BASE_SEPOLIA_CONTRACT_ADDRESS} on Base Sepolia."
-	@echo "Agence deployed to ${POLYGON_AMOY_CONTRACT_ADDRESS} on Polygon Amoy."
-
-	@echo "Deployment complete ✨"
+# Clean up deployment artifacts
+.PHONY: clean
+clean:
+	@rm -rf data/base_sepolia data/polygon_amoy
+	@echo "Cleaned up deployment artifacts"
