fix: solved make file not setting peers

--- a/contracts/Makefile
+++ b/contracts/Makefile
@@ -31,37 +31,36 @@ deploy-polygon: deploy.sh
 # Set peer configurations between networks
 .PHONY: set-peers
 set-peers:
-	# Validate required environment variables
-	@if [ -z "$(POLYGON_AMOY_ENDPOINT_ID)" ]; then \
-		echo "Error: POLYGON_AMOY_ENDPOINT_ID is not set"; \
-		exit 1; \
-	fi
-	@if [ -z "$(BASE_SEPOLIA_ENDPOINT_ID)" ]; then \
-		echo "Error: BASE_SEPOLIA_ENDPOINT_ID is not set"; \
-		exit 1; \
-	fi
+	@echo "============= Setting Peer Configurations =============="
 
-	# Load contract addresses
-	$(eval BASE_SEPOLIA_AGENCE_ADDRESS=$(jq -r .deployedTo "./data/base_sepolia/agence.json"))
-	$(eval POLYGON_AMOY_AGENCE_ADDRESS=$(jq -r .deployedTo "./data/polygon_amoy/agence.json"))
+	$(eval BASE_SEPOLIA_AGENCE_ADDRESS=$(shell jq -r .deployedTo "./data/base_sepolia/agence.json"))
+	$(eval POLYGON_AMOY_AGENCE_ADDRESS=$(shell jq -r .deployedTo "./data/polygon_amoy/agence.json"))
 
-	# Convert contract addresses to bytes32
+	@echo "Base Sepolia Agence Address: $(BASE_SEPOLIA_AGENCE_ADDRESS)"
+	@echo "Polygon Amoy Agence Address: $(POLYGON_AMOY_AGENCE_ADDRESS)"
+
 	$(eval POLYGON_AMOY_CONTRACT_BYTES32=$(shell cast --to-bytes32 $(POLYGON_AMOY_AGENCE_ADDRESS)))
 	$(eval BASE_SEPOLIA_CONTRACT_BYTES32=$(shell cast --to-bytes32 $(BASE_SEPOLIA_AGENCE_ADDRESS)))
+
+	@echo "\n============= Variables Loaded =============="
 
 	@echo "Setting Peer for Base Sepolia"
 	cast send $(BASE_SEPOLIA_AGENCE_ADDRESS) --json \
 		--rpc-url $(BASE_SEPOLIA_RPC) \
 		"setPeer(uint32, bytes32)" $(POLYGON_AMOY_ENDPOINT_ID) $(POLYGON_AMOY_CONTRACT_BYTES32) \
-		--account deployer
+		--account deployer \
+		| jq
+
+	@echo "\n\n"
 
 	@echo "Setting Peer for Polygon Amoy"
 	cast send $(POLYGON_AMOY_AGENCE_ADDRESS) --json \
 		--rpc-url $(POLYGON_AMOY_RPC) \
 		"setPeer(uint32, bytes32)" $(BASE_SEPOLIA_ENDPOINT_ID) $(BASE_SEPOLIA_CONTRACT_BYTES32) \
-		--account deployer
+		--account deployer \
+		| jq
 
-	@echo "\n\n============= Peer Configuration Complete ✨ ============="
+	@echo "\n============= Peer Configuration Complete ✨ ============="
 
 # Clean up deployment artifacts
 .PHONY: clean
